// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package Managers > bun workspace --linker=hoisted - multiple conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=hoisted - multiple conflicting versions 2`] = `
{
  "files": {
    "index.js": {
      "offset": 31280,
      "size": 40,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1080,
            },
            "index.js": {
              "offset": 1210,
              "size": 380,
            },
            "package.json": {
              "offset": 1590,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 130,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2880,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3020,
              "size": 1080,
            },
            "index.js": {
              "offset": 4090,
              "size": 850,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6330,
              "size": 120,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 510,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 250,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9340,
                  "size": 1450,
                },
              },
            },
            "test.js": {
              "offset": 10780,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 30,
            },
            "index.js": {
              "offset": 14810,
              "size": 50,
            },
            "node_modules": {
              "files": {
                "is-bigint": {
                  "files": {
                    ".eslintignore": {
                      "offset": 14990,
                      "size": 10,
                    },
                    ".nycrc": {
                      "offset": 15000,
                      "size": 140,
                    },
                    "LICENSE": {
                      "offset": 15140,
                      "size": 1080,
                    },
                    "index.js": {
                      "offset": 16210,
                      "size": 740,
                    },
                    "package.json": {
                      "offset": 16950,
                      "size": 960,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": 14850,
              "size": 140,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 17900,
              "size": 1100,
            },
            "browser.js": {
              "offset": 19000,
              "size": 5420,
            },
            "index.js": {
              "offset": 24420,
              "size": 100,
            },
            "package.json": {
              "offset": 24520,
              "size": 450,
            },
            "test.js": {
              "offset": 24970,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 31310,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=hoisted 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=hoisted 2`] = `
{
  "files": {
    "index.js": {
      "offset": 28340,
      "size": 40,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1080,
            },
            "index.js": {
              "offset": 1210,
              "size": 380,
            },
            "package.json": {
              "offset": 1590,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 130,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2880,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3020,
              "size": 1080,
            },
            "index.js": {
              "offset": 4090,
              "size": 850,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6330,
              "size": 120,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 510,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 250,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9340,
                  "size": 1450,
                },
              },
            },
            "test.js": {
              "offset": 10780,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 30,
            },
            "index.js": {
              "offset": 14810,
              "size": 50,
            },
            "package.json": {
              "offset": 14850,
              "size": 120,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 14970,
              "size": 1100,
            },
            "browser.js": {
              "offset": 16060,
              "size": 5420,
            },
            "index.js": {
              "offset": 21480,
              "size": 100,
            },
            "package.json": {
              "offset": 21580,
              "size": 450,
            },
            "test.js": {
              "offset": 22030,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28370,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=isolated - multiple conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=isolated - multiple conflicting versions 2`] = `
{
  "files": {
    "index.js": {
      "offset": 31280,
      "size": 40,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1080,
            },
            "index.js": {
              "offset": 1210,
              "size": 380,
            },
            "package.json": {
              "offset": 1590,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 130,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2880,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3020,
              "size": 1080,
            },
            "index.js": {
              "offset": 4090,
              "size": 850,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6330,
              "size": 120,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 510,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 250,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9340,
                  "size": 1450,
                },
              },
            },
            "test.js": {
              "offset": 10780,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 30,
            },
            "index.js": {
              "offset": 14810,
              "size": 50,
            },
            "node_modules": {
              "files": {
                "is-bigint": {
                  "files": {
                    ".eslintignore": {
                      "offset": 14990,
                      "size": 10,
                    },
                    ".nycrc": {
                      "offset": 15000,
                      "size": 140,
                    },
                    "LICENSE": {
                      "offset": 15140,
                      "size": 1080,
                    },
                    "index.js": {
                      "offset": 16210,
                      "size": 740,
                    },
                    "package.json": {
                      "offset": 16950,
                      "size": 960,
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": 14850,
              "size": 140,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 17900,
              "size": 1100,
            },
            "browser.js": {
              "offset": 19000,
              "size": 5420,
            },
            "index.js": {
              "offset": 24420,
              "size": 100,
            },
            "package.json": {
              "offset": 24520,
              "size": 450,
            },
            "test.js": {
              "offset": 24970,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 31310,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=isolated 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=isolated 2`] = `
{
  "files": {
    "index.js": {
      "offset": 28340,
      "size": 40,
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": 0,
              "size": 140,
            },
            "LICENSE": {
              "offset": 140,
              "size": 1080,
            },
            "index.js": {
              "offset": 1210,
              "size": 380,
            },
            "package.json": {
              "offset": 1590,
              "size": 1170,
            },
            "tsconfig.json": {
              "offset": 2750,
              "size": 130,
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": 2880,
              "size": 140,
            },
            "LICENSE": {
              "offset": 3020,
              "size": 1080,
            },
            "index.js": {
              "offset": 4090,
              "size": 850,
            },
            "package.json": {
              "offset": 4930,
              "size": 1400,
            },
            "tsconfig.json": {
              "offset": 6330,
              "size": 120,
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": 6440,
              "size": 510,
            },
            "index.js": {
              "offset": 6940,
              "size": 1470,
            },
            "package.json": {
              "offset": 8410,
              "size": 470,
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": 8880,
                  "size": 250,
                },
                "es6Repeat.js": {
                  "offset": 9120,
                  "size": 220,
                },
                "perf.js": {
                  "offset": 9340,
                  "size": 1450,
                },
              },
            },
            "test.js": {
              "offset": 10780,
              "size": 4010,
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": 14780,
              "size": 30,
            },
            "index.js": {
              "offset": 14810,
              "size": 50,
            },
            "package.json": {
              "offset": 14850,
              "size": 120,
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": 14970,
              "size": 1100,
            },
            "browser.js": {
              "offset": 16060,
              "size": 5420,
            },
            "index.js": {
              "offset": 21480,
              "size": 100,
            },
            "package.json": {
              "offset": 21580,
              "size": 450,
            },
            "test.js": {
              "offset": 22030,
              "size": 6310,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28370,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > local file:// protocol with npm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with pnpm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with traversal for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with yarn for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with yarn-berry for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > npm 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > npm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": 24710,
              "size": 40,
            },
          },
        },
        "readme.md": {
          "offset": 24750,
          "size": 80,
        },
      },
    },
    "index.html": {
      "offset": 24820,
      "size": 850,
    },
    "index.js": {
      "offset": 25660,
      "size": 4190,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 29850,
      "size": 370,
    },
  },
}
`;

exports[`Package Managers > pnpm 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > pnpm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": 24710,
              "size": 40,
            },
          },
        },
        "readme.md": {
          "offset": 24750,
          "size": 80,
        },
      },
    },
    "index.html": {
      "offset": 24820,
      "size": 850,
    },
    "index.js": {
      "offset": 25660,
      "size": 4190,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 29850,
      "size": 510,
    },
  },
}
`;

exports[`Package Managers > traversal hoisted 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal hoisted 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 380,
    },
    "index.js": {
      "offset": 25090,
      "size": 620,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 25710,
      "size": 310,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": 26020,
          "size": 720,
        },
      },
    },
  },
}
`;

exports[`Package Managers > traversal multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 850,
    },
    "index.js": {
      "offset": 25550,
      "size": 2510,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28060,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > traversal workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 850,
    },
    "index.js": {
      "offset": 25550,
      "size": 2510,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28060,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > yarn 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 380,
    },
    "index.js": {
      "offset": 25090,
      "size": 620,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 25710,
      "size": 340,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": 26050,
          "size": 720,
        },
      },
    },
  },
}
`;

exports[`Package Managers > yarn berry 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 380,
    },
    "index.js": {
      "offset": 25090,
      "size": 620,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 25710,
      "size": 310,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": 26020,
          "size": 720,
        },
      },
    },
  },
}
`;

exports[`Package Managers > yarn berry multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 850,
    },
    "index.js": {
      "offset": 25550,
      "size": 2510,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28060,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > yarn berry workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 850,
    },
    "index.js": {
      "offset": 25550,
      "size": 2510,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28060,
      "size": 330,
    },
  },
}
`;

exports[`Package Managers > yarn multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 850,
    },
    "index.js": {
      "offset": 25550,
      "size": 2510,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28060,
      "size": 360,
    },
  },
}
`;

exports[`Package Managers > yarn workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": 24710,
      "size": 850,
    },
    "index.js": {
      "offset": 25550,
      "size": 2510,
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": 0,
              "size": 1140,
            },
            "package.json": {
              "offset": 1140,
              "size": 910,
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": 2050,
                  "size": 6110,
                },
                "common.js": {
                  "offset": 8160,
                  "size": 6920,
                },
                "index.js": {
                  "offset": 15070,
                  "size": 320,
                },
                "node.js": {
                  "offset": 15390,
                  "size": 4730,
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": 20110,
              "size": 3030,
            },
            "license.md": {
              "offset": 23140,
              "size": 1080,
            },
            "package.json": {
              "offset": 24220,
              "size": 500,
            },
          },
        },
      },
    },
    "package.json": {
      "offset": 28060,
      "size": 360,
    },
  },
}
`;
